--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -9,12 +9,13 @@
 }
 
 * {
-    font-family: 'Poppins', sans-serif;
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 body {
+    font-family: 'Poppins', sans-serif;
     background-color: var(--bg);
     color: var(--primary);
 }
@@ -27,6 +28,7 @@ body {
     background-color: var(--white);
     border: 1px solid rgb(228, 224, 224);
     padding: 5px 25px;
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1) ;
     
 }
 
@@ -63,7 +65,7 @@ a:hover {
     max-width: 1020px;
     margin: auto;
     margin-top: 5%;
-    margin-bottom: 20px;
+    margin-bottom: 5%;
 }
 
 .intro {
@@ -88,7 +90,7 @@ a:hover {
 
 .deatil-loc {
     font-size: 25px;
-   color: #4d4a4a;
+        color: #767676;
 }
 
 .detail-social {
@@ -118,4 +120,211 @@ a:hover {
     object-position: center;
     width: 300px; 
 
+}
+
+
+
+.hero-img {
+    -webkit-animation: morph 8s ease-in-out infinite;
+    animation: morph 8s ease-in-out infinite;
+    background-image: url(/assets/images/avatar.png);
+    background-position: 50%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    border: 3px solid #2d2e32;
+    border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
+    height: 25rem;
+    position: relative;
+    transition: all 1s ease-in-out;
+    width: 25rem;
+}
+
+@-webkit-keyframes morph {
+    0% {
+        border-radius: 60% 40% 30% 70%/60% 30% 70% 40%
+    }
+
+    50% {
+        border-radius: 30% 60% 70% 40%/50% 60% 30% 60%
+    }
+
+    to {
+        border-radius: 60% 40% 30% 70%/60% 30% 70% 40%
+    }
+}
+
+@keyframes morph {
+    0% {
+        border-radius: 60% 40% 30% 70%/60% 30% 70% 40%
+    }
+
+    50% {
+        border-radius: 30% 60% 70% 40%/50% 60% 30% 60%
+    }
+
+    to {
+        border-radius: 60% 40% 30% 70%/60% 30% 70% 40%
+    }
+}
+
+
+.skills {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    font-size: 20px;
+    margin-top: 40px;
+
+}
+
+.skills img {
+    width: 60px;
+    margin: 20px;
+
+}
+
+/* about section */
+#about-section {
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    background-color: var(--white);
+}
+
+.about{
+    
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+ 
+.about-title {
+    font-size: 20px;
+    font-weight: 700;
+}
+
+.about-subtitle {
+    font-size: 18px;
+    color: #7d7b7b;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.about-detail {
+    margin-left: 8%;
+    width: 80%;
+}
+
+.about-detail a {
+    font-weight: 700;
+    text-transform: uppercase;
+}
+
+.about-img img {
+    width: 100%;
+    border-radius: 20px;
+    transition: transform 0.3s ease;
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5) ;
+    cursor: pointer;
+}
+
+.about-img img:hover {
+    transform: translateY(-10px);
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.9) ;
+    
+}
+
+.project-title {
+   color: var(--hover);
+   font-size: 20px;
+   font-weight: 700;
+   text-transform: uppercase;
+}
+
+.project-subtitle {
+    font-size: 18px;
+    color: #2d2e32;
+    margin-top: 10px;
+    margin-bottom: 20px;
+}
+
+.card {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 25px;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.09) ;
+}
+
+.col-1 {
+    width: 40%;
+}
+
+.col-2 {
+    width: 60%;
+    text-align: center;
+    align-items: center;
+}
+
+.card-title {
+    font-size: 20px;
+    font-weight: 600;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.card-content {
+    font-size: 16px;
+    font-weight: 400;
+    color: var(--secondary);
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.card-tech button {
+    padding: 5px 10px;
+    font-size: 16px;
+    font-weight: 500;
+    background-color: var(--white);
+    border: none;
+    border: 0.1px solid rgba(0, 0, 0, 0.09);
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.card-link {
+    display: flex;
+    justify-content: center;
+    gap: 15px;
+    text-align: center;
+}
+
+.card-link a {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    color: var(--primary);
+    font-size: 20px;
+}
+
+.card-link a i {
+     margin-top: -8px;
+     font-size: 18px;
+     font-weight: 700;
+}
+
+
+.card-link a:hover {
+    color: var(--hover);
+    transition: color 0.3s ease;
+}
+
+
+.col-1 img {
+    width: 100%;
+    height: 250px;
+    object-fit: cover;
+    object-position: top;
 }
