--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -28,9 +28,11 @@ body {
     background-color: var(--white);
     border: 1px solid rgb(228, 224, 224);
     padding: 5px 25px;
-    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1) ;
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
     
 }
+
+
 
 ul {
     display: flex;
@@ -48,13 +50,13 @@ ul li {
 
 a {
     text-decoration: none;
-    color: var(--hover);
+    color: var(--primary);
     font-weight: 500;
     transition: color 0.3s ease;
 }
 
 a:hover {
-    color: #0655af;
+    color: var(--hover);
 }
 
 .nav-title {
@@ -95,7 +97,7 @@ a:hover {
 
 .detail-social {
     font-size: 30px;
-    width: 220px;
+    width: 200px;
     display: flex;
     justify-content: space-between;
 }
@@ -248,14 +250,21 @@ a:hover {
     margin-bottom: 20px;
 }
 
+        
+.card:nth-of-type(even) {
+ flex-direction: row-reverse;
+}
+
 .card {
     display: flex;
     justify-content: space-between;
     align-items: center;
     gap: 25px;
-    padding: 20px;
+    padding: 25px;
     border-radius: 10px;
-    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.09) ;
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.09);
+    margin-top: 50px;
+    margin-bottom: 50px;
 }
 
 .col-1 {
@@ -284,21 +293,23 @@ a:hover {
 }
 
 .card-tech button {
-    padding: 5px 10px;
-    font-size: 16px;
+    padding: 6px 12px;
+    font-size: 17px;
     font-weight: 500;
     background-color: var(--white);
     border: none;
     border: 0.1px solid rgba(0, 0, 0, 0.09);
     margin-top: 10px;
     margin-bottom: 10px;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 10px 0px;
 }
 
 .card-link {
     display: flex;
     justify-content: center;
-    gap: 15px;
+    gap: 18px;
     text-align: center;
+    margin-top: 20px;
 }
 
 .card-link a {
@@ -310,9 +321,10 @@ a:hover {
 }
 
 .card-link a i {
-     margin-top: -8px;
-     font-size: 18px;
-     font-weight: 700;
+    font-size: 26px;
+}
+.card-link .fa-arrow-up-right-from-square {
+    font-size: 22px;
 }
 
 
@@ -327,4 +339,145 @@ a:hover {
     height: 250px;
     object-fit: cover;
     object-position: top;
+    border-radius: 5px;
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.09);
+    transition: animation ease 0.3s;
 }
+
+@keyframes imgcolor {
+    0%   {box-shadow:0px 0px 10px 0px rgba(66, 241, 212, 0.9); left:0px; top:0px;}
+    25%  {box-shadow:0px 0px 10px 0px rgba(214, 214, 103, 0.8); left:200px; top:0px;}
+    50%  {box-shadow:0px 0px 10px 0px rgba(91, 91, 158, 0.7); left:200px; top:200px;}
+    75%  {box-shadow:0px 0px 10px 0px rgba(110, 197, 110, 0.6); left:0px; top:200px;}
+    100% {box-shadow:0px 0px 10px 0px rgba(173, 92, 92, 0.5); left:0px; top:0px;}
+}
+
+.col-1 img:hover {
+    animation: imgcolor 8s ease-in-out infinite;
+   
+}
+
+
+
+
+/* .col-1 img:hover {
+    animation: slideup 8s ease-in-out infinite;
+    transform: translateY(0%);
+    transition: transform 10s ease-in-out 0s;
+    transition-duration: 10s;
+    transition-timing-function: ease-in-out;
+    transition-delay: 0s;
+    transition-property: transform;
+}
+
+@keyframes slideup {
+    0%   {
+        transform: translateY(-100px);
+    }
+    25%  {
+        transform: translateY(-200px);
+    }
+    50%  {
+        transform: translateY(-300px);
+    }
+    100% {
+        transform: translateY(-400px);
+    }
+  } */
+
+/* contact section */
+
+.contact-title {
+    color: var(--hover);
+    font-size: 20px;
+    font-weight: 700;
+    text-transform: uppercase;
+}
+ 
+ .contact-subtitle {
+     font-size: 30px;
+     font-weight: 700;
+     color: #2d2e32;
+     margin-top: 10px;
+     margin-bottom: 20px;
+ }
+
+ .contact-info {
+    width: 800px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 20px;
+ }
+
+ .contact-item {
+    width: 380px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-radius: 10px;
+    padding: 14px 20px;
+    background-color: var(--white);
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.09);
+ }
+
+ .contact-item .left {
+    width: 25%;
+    font-size: 60px;
+    color: var(--hover);
+    
+ }
+ 
+ .contact-item .right {
+    width: 75%;
+    margin-left: -10px;
+ }
+
+.right-title {
+    font-size: 18px;
+    font-weight: 600;
+}
+
+.right-subtitle {
+    font-size: 16px;
+    color: var(--secondary);
+}
+
+footer {
+    background-color: var(--primary);
+    color: var(--white);
+    margin-bottom: -5%;
+}
+
+.footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 40px;
+    padding-bottom: 40px;
+}
+
+.footer .left {
+    font-size: 16px;
+    font-weight: 600;
+}
+
+
+.footer .right {
+    width: 310px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    font-size: 22px;
+}
+
+.footer .right a {
+   color: var(--white) !important;
+}
+
+
+.footer .right a:hover {
+    color: var(--hover) !important;
+ }
+ 
+
