--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,364 +1,367 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
 
 :root {
-    --primary : #2d2e32;
-    --secondary: #767676;
-    --white: #ffffff;
-    --bg: #f9f9f9;
-    --hover: #147efb;
+  --primary: #2d2e32;
+  --secondary: #767676;
+  --white: #ffffff;
+  --bg: #f9f9f9;
+  --hover: #147efb;
 }
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-    font-family: 'Poppins', sans-serif;
-    background-color: var(--bg);
-    color: var(--primary);
+  font-family: "Poppins", sans-serif;
+  background-color: var(--bg);
+  color: var(--primary);
 }
-
 
 .navbar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: var(--white);
-    border: 1px solid rgb(228, 224, 224);
-    padding: 5px 25px;
-    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
-    
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: var(--white);
+  border: 1px solid rgb(228, 224, 224);
+  padding: 5px 25px;
+  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
 }
 
-
-
 ul {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px 10px;
-    margin: 10px;
-    width: 20%;
-
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 10px;
+  margin: 10px;
+  width: 20%;
 }
 
 ul li {
-    list-style: none;
+  list-style: none;
 }
 
 a {
-    text-decoration: none;
-    color: var(--primary);
-    font-weight: 500;
-    transition: color 0.3s ease;
+  text-decoration: none;
+  color: var(--primary);
+  font-weight: 500;
+  transition: color 0.3s ease;
 }
 
 a:hover {
-    color: var(--hover);
+  color: var(--hover);
 }
 
 .nav-title {
-    font-size: 28px;
+  font-size: 28px;
 }
 
 .container {
-    max-width: 1020px;
-    margin: auto;
-    margin-top: 5%;
-    margin-bottom: 5%;
+  max-width: 1020px;
+  margin: auto;
+  margin-top: 5%;
+  margin-bottom: 5%;
 }
 
 .intro {
-    display: flex;
-    
+  display: flex;
 }
 
 .m-20 {
-    margin-top: 20px;
-    margin-bottom: 20px;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 .detail {
-    margin-right: 10px;
+  margin-right: 10px;
 }
 
 .detail-heading {
-    font-size: 45px;
+  font-size: 45px;
 }
 .detail-subheading {
-    font-size: 25px;
+  font-size: 25px;
 }
 
 .deatil-loc {
-    font-size: 25px;
-        color: #767676;
+  font-size: 25px;
+  color: #767676;
 }
 
 .detail-social {
-    font-size: 30px;
-    width: 200px;
-    display: flex;
-    justify-content: space-between;
+  font-size: 30px;
+  width: 200px;
+  display: flex;
+  justify-content: space-between;
 }
 
 .detail-social a {
-    color: #2d2e32;
-    transition: color 0.3s ease;
+  color: #2d2e32;
+  transition: color 0.3s ease;
 }
 
 .detail-social a:hover {
-    color: #9f9c9c;
+  color: #9f9c9c;
 }
 
 .avatar {
-    margin-left: 80px;
+  margin-left: 80px;
 }
- 
 
 .avatar img {
-    border-radius: 200px;
-    object-fit: center;
-    object-position: center;
-    width: 300px; 
-
+  border-radius: 200px;
+  object-fit: center;
+  object-position: center;
+  width: 300px;
 }
 
-
-
 .hero-img {
-    -webkit-animation: morph 8s ease-in-out infinite;
-    animation: morph 8s ease-in-out infinite;
-    background-image: url(/assets/images/avatar.png);
-    background-position: 50%;
-    background-repeat: no-repeat;
-    background-size: cover;
-    border: 3px solid #2d2e32;
-    border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
-    height: 25rem;
-    position: relative;
-    transition: all 1s ease-in-out;
-    width: 25rem;
+  -webkit-animation: morph 8s ease-in-out infinite;
+  animation: morph 8s ease-in-out infinite;
+  background-image: url(/assets/images/avatar.png);
+  background-position: 50%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  border: 3px solid #2d2e32;
+  border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
+  height: 25rem;
+  position: relative;
+  transition: all 1s ease-in-out;
+  width: 25rem;
 }
 
 @-webkit-keyframes morph {
-    0% {
-        border-radius: 60% 40% 30% 70%/60% 30% 70% 40%
-    }
+  0% {
+    border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
+  }
 
-    50% {
-        border-radius: 30% 60% 70% 40%/50% 60% 30% 60%
-    }
+  50% {
+    border-radius: 30% 60% 70% 40%/50% 60% 30% 60%;
+  }
 
-    to {
-        border-radius: 60% 40% 30% 70%/60% 30% 70% 40%
-    }
+  to {
+    border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
+  }
 }
 
 @keyframes morph {
-    0% {
-        border-radius: 60% 40% 30% 70%/60% 30% 70% 40%
-    }
+  0% {
+    border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
+  }
 
-    50% {
-        border-radius: 30% 60% 70% 40%/50% 60% 30% 60%
-    }
+  50% {
+    border-radius: 30% 60% 70% 40%/50% 60% 30% 60%;
+  }
 
-    to {
-        border-radius: 60% 40% 30% 70%/60% 30% 70% 40%
-    }
+  to {
+    border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
+  }
 }
 
-
 .skills {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    font-size: 20px;
-    margin-top: 40px;
-
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-size: 20px;
+  margin-top: 40px;
 }
 
 .skills img {
-    width: 60px;
-    margin: 20px;
-
+  width: 60px;
+  margin: 20px;
 }
 
 /* about section */
 #about-section {
-    padding-top: 1rem;
-    padding-bottom: 1rem;
-    background-color: var(--white);
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  background-color: var(--white);
 }
 
-.about{
-    
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.about {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
- 
 .about-title {
-    font-size: 20px;
-    font-weight: 700;
+  font-size: 20px;
+  font-weight: 700;
 }
 
 .about-subtitle {
-    font-size: 18px;
-    color: #7d7b7b;
-    margin-top: 10px;
-    margin-bottom: 10px;
+  font-size: 18px;
+  color: #7d7b7b;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 .about-detail {
-    margin-left: 8%;
-    width: 80%;
+  margin-left: 8%;
+  width: 80%;
 }
 
 .about-detail a {
-    font-weight: 700;
-    text-transform: uppercase;
+  font-weight: 700;
+  text-transform: uppercase;
 }
 
 .about-img img {
-    width: 100%;
-    border-radius: 20px;
-    transition: transform 0.3s ease;
-    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5) ;
-    cursor: pointer;
+  width: 100%;
+  border-radius: 20px;
+  transition: transform 0.3s ease;
+  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
+  cursor: pointer;
 }
 
 .about-img img:hover {
-    transform: translateY(-10px);
-    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.9) ;
-    
+  transform: translateY(-10px);
+  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.9);
 }
 
 .project-title {
-   color: var(--hover);
-   font-size: 20px;
-   font-weight: 700;
-   text-transform: uppercase;
+  color: var(--hover);
+  font-size: 20px;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+.section-heading {
+  color: var(--hover);
+  font-size: 20px;
+  font-weight: 700;
+  text-transform: uppercase;
 }
 
 .project-subtitle {
-    font-size: 18px;
-    color: #2d2e32;
-    margin-top: 10px;
-    margin-bottom: 20px;
+  font-size: 18px;
+  color: #2d2e32;
+  margin-top: 10px;
+  margin-bottom: 20px;
 }
 
-        
 .card:nth-of-type(even) {
- flex-direction: row-reverse;
+  flex-direction: row-reverse;
 }
 
 .card {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    gap: 25px;
-    padding: 25px;
-    border-radius: 10px;
-    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.09);
-    margin-top: 50px;
-    margin-bottom: 50px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 25px;
+  padding: 25px;
+  border-radius: 10px;
+  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.09);
+  margin-top: 50px;
+  margin-bottom: 50px;
 }
 
 .col-1 {
-    width: 40%;
+  width: 40%;
 }
 
 .col-2 {
-    width: 60%;
-    text-align: center;
-    align-items: center;
+  width: 60%;
+  text-align: center;
+  align-items: center;
 }
 
 .card-title {
-    font-size: 20px;
-    font-weight: 600;
-    margin-top: 10px;
-    margin-bottom: 10px;
+  font-size: 20px;
+  font-weight: 600;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 .card-content {
-    font-size: 16px;
-    font-weight: 400;
-    color: var(--secondary);
-    margin-top: 10px;
-    margin-bottom: 10px;
+  font-size: 16px;
+  font-weight: 400;
+  color: var(--secondary);
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 .card-tech button {
-    padding: 6px 12px;
-    font-size: 17px;
-    font-weight: 500;
-    background-color: var(--white);
-    border: none;
-    border: 0.1px solid rgba(0, 0, 0, 0.09);
-    margin-top: 10px;
-    margin-bottom: 10px;
-    box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 10px 0px;
+  padding: 6px 12px;
+  font-size: 17px;
+  font-weight: 500;
+  background-color: var(--white);
+  border: none;
+  border: 0.1px solid rgba(0, 0, 0, 0.09);
+  margin-top: 10px;
+  margin-bottom: 10px;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 10px 0px;
 }
 
 .card-link {
-    display: flex;
-    justify-content: center;
-    gap: 18px;
-    text-align: center;
-    margin-top: 20px;
+  display: flex;
+  justify-content: center;
+  gap: 18px;
+  text-align: center;
+  margin-top: 20px;
 }
 
 .card-link a {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    color: var(--primary);
-    font-size: 20px;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  color: var(--primary);
+  font-size: 20px;
 }
 
 .card-link a i {
-    font-size: 26px;
+  font-size: 26px;
 }
 .card-link .fa-arrow-up-right-from-square {
-    font-size: 22px;
+  font-size: 22px;
 }
-
 
 .card-link a:hover {
-    color: var(--hover);
-    transition: color 0.3s ease;
+  color: var(--hover);
+  transition: color 0.3s ease;
 }
 
-
 .col-1 img {
-    width: 100%;
-    height: 250px;
-    object-fit: cover;
-    object-position: top;
-    border-radius: 5px;
-    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.09);
-    transition: animation ease 0.3s;
+  width: 100%;
+  height: 250px;
+  object-fit: cover;
+  object-position: top;
+  border-radius: 5px;
+  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.09);
+  transition: animation ease 0.3s;
 }
 
 @keyframes imgcolor {
-    0%   {box-shadow:0px 0px 10px 0px rgba(66, 241, 212, 0.9); left:0px; top:0px;}
-    25%  {box-shadow:0px 0px 10px 0px rgba(214, 214, 103, 0.8); left:200px; top:0px;}
-    50%  {box-shadow:0px 0px 10px 0px rgba(91, 91, 158, 0.7); left:200px; top:200px;}
-    75%  {box-shadow:0px 0px 10px 0px rgba(110, 197, 110, 0.6); left:0px; top:200px;}
-    100% {box-shadow:0px 0px 10px 0px rgba(173, 92, 92, 0.5); left:0px; top:0px;}
+  0% {
+    box-shadow: 0px 0px 10px 0px rgba(66, 241, 212, 0.9);
+    left: 0px;
+    top: 0px;
+  }
+  25% {
+    box-shadow: 0px 0px 10px 0px rgba(214, 214, 103, 0.8);
+    left: 200px;
+    top: 0px;
+  }
+  50% {
+    box-shadow: 0px 0px 10px 0px rgba(91, 91, 158, 0.7);
+    left: 200px;
+    top: 200px;
+  }
+  75% {
+    box-shadow: 0px 0px 10px 0px rgba(110, 197, 110, 0.6);
+    left: 0px;
+    top: 200px;
+  }
+  100% {
+    box-shadow: 0px 0px 10px 0px rgba(173, 92, 92, 0.5);
+    left: 0px;
+    top: 0px;
+  }
 }
 
 .col-1 img:hover {
-    animation: imgcolor 8s ease-in-out infinite;
-   
+  animation: imgcolor 8s ease-in-out infinite;
 }
-
-
-
 
 /* .col-1 img:hover {
     animation: slideup 8s ease-in-out infinite;
@@ -388,103 +391,271 @@ a:hover {
 /* contact section */
 
 .contact-title {
-    color: var(--hover);
-    font-size: 20px;
-    font-weight: 700;
-    text-transform: uppercase;
+  color: var(--hover);
+  font-size: 20px;
+  font-weight: 700;
+  text-transform: uppercase;
 }
- 
- .contact-subtitle {
-     font-size: 30px;
-     font-weight: 700;
-     color: #2d2e32;
-     margin-top: 10px;
-     margin-bottom: 20px;
- }
 
- .contact-info {
-    width: 800px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    gap: 20px;
- }
+.contact-subtitle {
+  font-size: 30px;
+  font-weight: 700;
+  color: #2d2e32;
+  margin-top: 10px;
+  margin-bottom: 20px;
+}
 
- .contact-item {
-    width: 380px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    border-radius: 10px;
-    padding: 14px 20px;
-    background-color: var(--white);
-    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.09);
- }
+.contact-info {
+  width: 800px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 20px;
+}
 
- .contact-item .left {
-    width: 25%;
-    font-size: 60px;
-    color: var(--hover);
-    
- }
+.contact-item {
+  width: 380px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-radius: 10px;
+  padding: 14px 20px;
+  background-color: var(--white);
+  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.09);
+}
 
- .contact-item .left a {
-    width: 25%;
-    font-size: 60px;
-    color: var(--hover);
-    
- }
- 
- .contact-item .right {
-    width: 75%;
-    margin-left: -10px;
- }
+.contact-item .left {
+  width: 25%;
+  font-size: 60px;
+  color: var(--hover);
+}
+
+.contact-item .left a {
+  width: 25%;
+  font-size: 60px;
+  color: var(--hover);
+}
+
+.contact-item .right {
+  width: 75%;
+  margin-left: -10px;
+}
 
 .right-title {
-    font-size: 18px;
-    font-weight: 600;
+  font-size: 18px;
+  font-weight: 600;
 }
 
 .right-subtitle {
-    font-size: 16px;
-    color: var(--secondary);
+  font-size: 16px;
+  color: var(--secondary);
 }
 
 footer {
-    background-color: var(--primary);
-    color: var(--white);
-    margin-bottom: -5%;
+  background-color: var(--primary);
+  color: var(--white);
+  margin-bottom: -5%;
 }
 
 .footer {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding-top: 40px;
-    padding-bottom: 40px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: 40px;
+  padding-bottom: 40px;
 }
 
 .footer .left {
-    font-size: 16px;
-    font-weight: 600;
+  font-size: 16px;
+  font-weight: 600;
 }
 
-
 .footer .right {
-    width: 310px;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    font-size: 22px;
+  width: 310px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  font-size: 22px;
 }
 
 .footer .right a {
-   color: var(--white) !important;
+  color: var(--white) !important;
 }
 
-
 .footer .right a:hover {
-    color: var(--hover) !important;
- }
- 
+  color: var(--hover) !important;
+}
 
+/* Resonsive */
+@media only screen and (max-width: 800px) {
+  /* For tablets: */
+  ul {
+    width: 46%;
+  }
+
+  .intro {
+    padding: 20px;
+  }
+
+  .detail-heading {
+    font-size: 28px;
+  }
+  .detail-subheading {
+    font-size: 20px;
+  }
+  .deatil-loc {
+    font-size: 20px;
+  }
+
+  .hero-img {
+    width: 14rem;
+    height: unset;
+  }
+
+  .skills {
+    display: block;
+    align-items: center;
+    justify-content: space;
+    font-size: 20px;
+    margin-top: 40px;
+    padding: 10px 36px;
+  }
+
+  .about {
+    padding: 20px;
+  }
+
+  .project {
+    padding: 20px;
+    text-align: center;
+  }
+
+  .contact {
+    padding: 20px;
+    text-align: center;
+  }
+
+  .contact-info {
+    display: block;
+    align-items: center;
+    margin: auto;
+  }
+
+  .contact-item {
+    margin: auto;
+  }
+  .footer {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  /* For mobile phones: */
+  .nav-title {
+    font-size: 18px;
+  }
+  ul {
+    width: 65%;
+  }
+
+  .intro {
+    padding: 20px;
+  }
+
+  .detail-heading {
+    font-size: 16px;
+  }
+  .detail-subheading {
+    font-size: 10px;
+  }
+  .deatil-loc {
+    font-size: 10px;
+  }
+
+  .hero-img {
+    width: 10rem;
+    height: unset;
+  }
+
+  .about {
+    text-align: center;
+    display: block;
+    margin: auto;
+  }
+
+ 
+  .about-title {
+    font-size: 16px;
+  }
+
+  .about-subtitle {
+    font-size: 14px;
+  }
+
+  .skills {
+    display: block;
+    align-items: center;
+    justify-content: space;
+    font-size: 20px;
+    margin-top: 40px;
+    padding: 10px 36px;
+  }
+
+  .about {
+    padding: 20px;
+  }
+
+  .project {
+    padding: 20px;
+    text-align: center;
+  }
+
+  .card {
+    display: block;
+    text-align: center;
+    margin: auto;
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
+
+  .col-1 {
+    width: 100%;
+    margin: auto;
+  }
+  .col-2 {
+    width: 100%;
+    margin: auto;
+  }
+
+  .contact-item {
+   
+    margin-left: -4px;
+  }
+
+  .contact {
+    padding: 20px;
+    text-align: center;
+  }
+
+  .contact-info {
+    display: block;
+    align-items: center;
+    margin: auto;
+  }
+  .footer {
+    padding-left: 20px;
+    padding-right: 20px;
+    display: block;
+    text-align: center;
+    margin: auto;
+  }
+  .footer .right {
+    margin: auto;
+  }
+
+  .about-detail {
+    
+    margin-top: 34px;
+}
+}
