--- a/assets/css/blue.css
+++ b/assets/css/blue.css
@@ -26,7 +26,14 @@
 }
 
 .card {
-  box-shadow: 10px 10px 10px 10px rgba(79, 233, 189, 0.1);
+  /* box-shadow: 10px 10px 10px 10px rgba(79, 233, 189, 0.1); */
+   transition: all ease 0.4s;
+  
+}
+
+.card:hover {
+   
+  box-shadow: 0px 0px 10px 10px #12a7be45;
   
 }
 
@@ -47,4 +54,8 @@ footer {
 
 .detail-social a {
   color: var(--secondaryText);
+}
+
+.nav-block {
+  display: none;
 }
