--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -96,6 +96,8 @@ body {
 }
 
 .navbar {
+  /* overflow: hidden; */
+  position: fixed; 
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -103,6 +105,8 @@ body {
   padding: 5px 25px;
   box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
   animation: nav-load 0.3s ease;
+  top: 0; /* Position the navbar at the top of the page */
+  width: 100%; /* Full width */
 }
 
 @keyframes nav-load {
@@ -628,4 +632,71 @@ footer {
 .icon i {
   font-size: 25px;
   margin-top: 9px;
+}
+
+.nav-hum{
+  display: none;
+}
+.nav-hum i {
+  font-size:30px;
+  cursor:pointer
+}
+
+ 
+ 
+.nav-block {
+  position: relative;
+  bottom: 0%;
+   width: 400px;
+}
+
+.intro {
+  margin-top: 80px;
+}
+
+.nav-block ul {
+  position: absolute;
+  background-color: #111921;
+
+}
+
+
+.sidenav {
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: #192734;
+  color: white;
+  overflow-x: hidden;
+  transition: 0.5s;
+  padding-top: 60px;
+}
+
+.sidenav a {
+  padding: 8px 8px 8px 32px;
+  text-decoration: none;
+  font-size: 25px;
+  color: #818181;
+  display: block;
+  transition: 0.3s;
+}
+
+.sidenav a:hover {
+  color: #f1f1f1;
+}
+
+.sidenav .closebtn {
+  position: absolute;
+  top: 0;
+  right: 25px;
+  font-size: 36px;
+  margin-left: 50px;
+}
+
+@media screen and (max-height: 450px) {
+  .sidenav {padding-top: 15px;}
+  .sidenav a {font-size: 18px;}
 }
