--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -474,7 +474,7 @@ a:hover {
   transition: animation ease 0.3s;
 }
 
-@keyframes imgcolor {
+/* @keyframes imgcolor {
   0% {
     box-shadow: 0px 0px 10px 0px rgba(66, 241, 212, 0.9);
     left: 0px;
@@ -500,10 +500,17 @@ a:hover {
     left: 0px;
     top: 0px;
   }
+} */
+
+@keyframes imgcolor {
+  0% { 
+    object-position: 500%;
+  }
 }
 
+
 .col-1 img:hover {
-  animation: imgcolor 8s ease-in-out infinite;
+  animation: imgcolor 6s ease-in-out infinite;
 }
 
 /* .col-1 img:hover {
@@ -515,6 +522,9 @@ a:hover {
     transition-delay: 0s;
     transition-property: transform;
 }
+
+
+/* contact section */
 
 @keyframes slideup {
     0%   {
@@ -529,9 +539,8 @@ a:hover {
     100% {
         transform: translateY(-400px);
     }
-  } */
+  }  
 
-/* contact section */
 
 .contact-title {
   color: var(--hover);
